# aps

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  API_V1_STATUS.md  DESIGN.md  EVALUATION.md  HLD.md  LATENCY_EXECUTION_PLAN.md  MEMO.md  PRD.md  PRODUCTION_PLAN.md  TEAM_GUIDE.md  TRD.md  WIREFRAMES.md  backenddatacontract.md  demo_state.json  plan.md
docs/adr/: 0001-langgraph-over-crewai.md  0002-gemini-free-tier.md  0003-postgres-vs-mongo.md  0004-tools-not-wrappers.md  0005-per-agent-tool-scoping.md  0006-sse-streaming.md  0007-react-vite-frontend.md  README.md
frontend/: BACKEND_DATA_CONTRACT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: demo_run.py  eval_g01_live.py  live_fanout_smoke.py  live_github_launch_smoke.py  live_providers_smoke.py  live_research_smoke.py  loadtest.py  run_research.py  smoke_test.py
tests/: conftest.py
tests/evals/: run_eval.py  scorers.py
tests/integration/: test_api.py  test_api_wiring.py  test_composition_chain.py  test_eval_runner.py  test_noisy_idea_quality.py  test_orchestrator.py  test_v1_real_data.py
tests/unit/: test_agent_tools.py  test_agents.py  test_analysis_quality.py  test_analysis_tools.py  test_api_v1.py  test_architecture_mermaid.py  test_artifact_quality.py  test_artifact_store.py  test_availability_agent.py  test_availability_graph.py  test_availability_tools.py  test_brand_agent.py  test_brand_graph.py  test_brand_tools.py  test_breaker.py  test_competitor_filter.py  test_compliance_agent.py  test_compliance_graph.py  test_compliance_tools.py  test_data_model_entities.py  test_http.py  (+42 more)
(+204 files in other folders)
